--- a/client/index.scss
+++ b/client/index.scss
@@ -1,4 +1,5 @@
-@import "~bootstrap/dist/css/bootstrap.min.css";
+@import '~bootstrap/dist/css/bootstrap.min.css';
+@import '~@fortawesome/fontawesome-free/css/all.css';
 
 body {
   background: steelblue;
