--- a/client/index.scss
+++ b/client/index.scss
@@ -1,5 +1,7 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
-@import '~@fortawesome/fontawesome-free/css/all.css';
+// @import '~@fortawesome/fontawesome-free/css/all.css';
+@import '~@fortawesome/fontawesome-free/css/fontawesome.min.css';
+@import '~@fortawesome/fontawesome-free/css/solid.min.css';
 @import './scssHelpers.scss';
 
 body {
