--- a/client/index.scss
+++ b/client/index.scss
@@ -16,6 +16,61 @@ body {
   &__container {
     min-height: 100vh;
     background: #fff;
-    box-shadow: inset 12px 0 25px -15px rgba(0, 0, 0, 0.9), inset -12px 0 25px -15px rgba(0, 0, 0, 0.9);
+    box-shadow: inset 12px 0 25px -15px rgba(0, 0, 0, 0.9),
+      inset -12px 0 25px -15px rgba(0, 0, 0, 0.9);
   }
 }
+
+.form-control {
+  &__inline {
+    width: auto;
+  }
+}
+
+.fa {
+  color: steelblue;
+}
+
+// spinner START
+$offset: 187;
+$duration: 1.8s;
+
+.spinner {
+  animation: rotator $duration linear infinite;
+  &_usual {
+    width: 25px;
+    height: 25px;
+  }
+}
+
+@keyframes rotator {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(270deg);
+  }
+}
+
+.path {
+  stroke-dasharray: $offset;
+  stroke-dashoffset: 0;
+  transform-origin: center;
+  stroke: steelblue;
+  animation: dash $duration ease-in-out infinite;
+}
+
+@keyframes dash {
+  0% {
+    stroke-dashoffset: $offset;
+  }
+  50% {
+    stroke-dashoffset: $offset/4;
+    transform: rotate(135deg);
+  }
+  100% {
+    stroke-dashoffset: $offset;
+    transform: rotate(450deg);
+  }
+}
+// spinner END
