--- a/client/components/App.scss
+++ b/client/components/App.scss
@@ -2,7 +2,7 @@
 // @import '~@fortawesome/fontawesome-free/css/all.css';
 @import '~@fortawesome/fontawesome-free/css/fontawesome.min.css';
 @import '~@fortawesome/fontawesome-free/css/solid.min.css';
-@import './lib/scssHelpers.scss';
+@import '../lib/scssHelpers.scss';
 
 body {
   font-family: 'Comic Sans MS', 'ubuntu';
